# avogadrolibs

./: .travis.yml
avogadro/core/: cube.cpp  cube.h  hydrogentools.cpp  mesh.cpp  mesh.h  molecule.cpp
avogadro/qtgui/: CMakeLists.txt  inputgenerator.cpp  inputgenerator.h  interfacescript.cpp  interfacescript.h  interfacewidget.cpp  interfacewidget.h  rwmolecule.h
avogadro/qtplugins/: CMakeLists.txt
avogadro/qtplugins/editor/: editor.cpp  editortoolwidget.cpp  editortoolwidget.h  editortoolwidget.ui
avogadro/qtplugins/surfaces/: CMakeLists.txt  ProteinSurface.cpp  ProteinSurface.h  edtsurface.cpp  edtsurface.h  surfaces.cpp  surfaces.h
avogadro/qtplugins/template/: template.qrc  templatetool.h  templatetoolwidget.cpp  templatetoolwidget.h  templatetoolwidget.ui
avogadro/qtplugins/workflows/: workflow.cpp  workflow.h
